--- a/public/global.css
+++ b/public/global.css
@@ -1,3 +1,17 @@
+html, body {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background: rgba(25, 25, 25, 1);
+}
+
+* {
+    /* box-sizing: border-box;  */
+    padding: 0;
+    margin: 0;
+	border: 0;
+}
+
 /* html, body {
 	position: relative;
 	width: 100%;
